// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> should render default placeholder image 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-SUCCESS_SRC"
    src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render error image 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-FAILURE_SRC"
    src="ERROR_SRC"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render placeholder image 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-SUCCESS_SRC"
    src="PLACEHOLDER_SRC"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render placeholder image due to cache disabled 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-SUCCESS_SRC"
    src="PLACEHOLDER_SRC"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render placeholder image instead of error image 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-FAILURE_SRC"
    src="PLACEHOLDER_SRC"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render src image 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-SUCCESS_SRC"
    crossorigin="anonymous"
    sizes="100vw"
    src="SUCCESS_SRC"
    srcset="cool.png"
  />
  <noscript />
</DocumentFragment>
`;

exports[`<Img /> should render src image due to image cached 1`] = `
<DocumentFragment>
  <img
    alt="Cool Image"
    class="cool-image no-js-SUCCESS_SRC"
    crossorigin="anonymous"
    sizes="100vw"
    src="SUCCESS_SRC"
    srcset="cool.png"
  />
  <noscript />
</DocumentFragment>
`;
